--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-transformers
-datasets
-torchaudio
+--extra-index-url https://download.pytorch.org/whl/cu128
 torch
+torchaudio
+
+# Additional packages (these will still install from PyPI unless available at the index above)
+transformers
+datasets[audio]
 librosa
 jiwer
 soundfile
 tqdm
 ipython
-soundfile
-datasets[audio]
 accelerate
-
 num2fawords
 parsivar
-pandas 
+pandas
