add version to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 #--extra-index-url https://download.pytorch.org/whl/cu128
-torch
-torchaudio
+torch==2.7.1
+torchaudio==2.7.1
 
 # Additional packages (these will still install from PyPI unless available at the index above)
-transformers
-datasets[audio]
-librosa
-jiwer
-soundfile
-tqdm
-ipython
-accelerate
-num2fawords
-parsivar
-pandas
-# nemo_toolkit[asr]
+transformers==4.48.3
+datasets[audio]==3.6.0
+librosa==0.11.0
+jiwer==4.0.0
+soundfile==0.13.1
+tqdm==4.67.1
+ipython==8.37.0
+accelerate==1.8.1
+num2fawords==1.1
+parsivar==0.2.3.1
+pandas==2.3.1
+nemo_toolkit[asr]==2.2.1
