--- a/configs/nemo_commonvoice.yaml
+++ b/configs/nemo_commonvoice.yaml
@@ -1,4 +1,4 @@
-model_runner: run_nemo
+model_runner: models.nemo_runner.run_nemo
 model_name: nvidia/stt_fa_fastconformer_hybrid_large
 dataset: hsekhalilian/commonvoice
 split: dev
