--- a/configs/wav2vec2_commonvoice.yaml
+++ b/configs/wav2vec2_commonvoice.yaml
@@ -1,4 +1,4 @@
-model_runner: run_wav2vec2
+model_runner: models.wav2vec2_runner.run_wav2vec2
 model_name: hsekhalilian/wav2vec2-custom-model
 dataset: hsekhalilian/commonvoice
 split: dev
