--- a/configs/wav2vec2_fleurs.yaml
+++ b/configs/wav2vec2_fleurs.yaml
@@ -1,4 +1,4 @@
-model_runner: run_wav2vec2
+model_runner: models.wav2vec2_runner.run_wav2vec2
 model_name: m3hrdadfi/wav2vec2-large-xlsr-persian-v3
 dataset: hsekhalilian/fleurs
 split: validation
