--- a/configs/whisper_fleurs.yaml
+++ b/configs/whisper_fleurs.yaml
@@ -1,5 +1,5 @@
-model_runner: run_whisper
-model_name: MohammadGholizadeh/whisper-large-v3-persian-common-voice-17
+model_runner: models.whisper_runner.run_whisper
+model_name: steja/whisper-large-persian
 dataset: hsekhalilian/fleurs
 split: validation
 language: persian
