--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,6 @@ numpy==1.26.4
 protobuf==4.24.4
 scikit-learn==1.7.0
 setuptools==80.9.0
+cuda-python>=12.3
+
+git+https://github.com/hossein-khalilian/text_normalizer.git
