--- a/configs/wav2vec2_commonvoice.yaml
+++ b/configs/wav2vec2_commonvoice.yaml
@@ -1,5 +1,5 @@
 model_runner: models.wav2vec2_runner.run_wav2vec2
-model_name: facebook/mms-1b-all
+model_name: ???
 dataset: hsekhalilian/commonvoice
 split: dev
 sample_size: 1000
