--- a/requirements.txt
+++ b/requirements.txt
@@ -22,5 +22,6 @@ scikit-learn==1.7.0
 setuptools==80.9.0
 cuda-python>=12.3
 python-dotenv
+hydra-core
 
 git+https://github.com/hossein-khalilian/text_normalizer.git
