--- a/configs/dolphin_commonvoice.yaml
+++ b/configs/dolphin_commonvoice.yaml
@@ -1,5 +1,5 @@
 model_runner: models.dolphin_runner.run_dolphin
-model_name: DataoceanAI/dolphin-small
+model_name: ???
 dataset: hsekhalilian/commonvoice
 split: dev
 sample_size: 100
