--- a/configs/dolphin_fleurs.yaml
+++ b/configs/dolphin_fleurs.yaml
@@ -1,4 +1,4 @@
 model_runner: models.dolphin_runner.run_dolphin
-model_name: DataoceanAI/dolphin-small
+model_name: ???
 dataset: hsekhalilian/fleurs
 split: validation
