--- a/configs/seamless_commonvoice.yaml
+++ b/configs/seamless_commonvoice.yaml
@@ -1,5 +1,5 @@
 model_runner: models.seamless_runner.run_seamless_batched
-model_name: facebook/hf-seamless-m4t-medium
+model_name: ???
 dataset: hsekhalilian/commonvoice
 split: dev
 language: persian
