--- a/configs/seamless_fleurs.yaml
+++ b/configs/seamless_fleurs.yaml
@@ -1,5 +1,5 @@
 model_runner: models.seamless_runner.run_seamless_batched
-model_name: facebook/seamless-m4t-medium
+model_name: ???
 dataset: hsekhalilian/fleurs
 split: validation
 language: persian
