--- a/configs/seamless_old_commonvoice.yaml
+++ b/configs/seamless_old_commonvoice.yaml
@@ -1,5 +1,5 @@
 model_runner: models.seamless_runner_old.run_seamless
-model_name: facebook/seamless-m4t-v2-large
+model_name: ???
 dataset: hsekhalilian/commonvoice
 split: dev
 language: persian
