--- a/configs/whisper_commonvoice.yaml
+++ b/configs/whisper_commonvoice.yaml
@@ -1,6 +1,6 @@
 model_runner: models.whisper_runner.run_whisper
-model_name: steja/whisper-large-persian
+model_name: ???
 dataset: hsekhalilian/commonvoice
 split: dev
 language: persian
-sample_size: 100
+sample_size: 1000
