update requirements scripts

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,8 @@ protobuf==4.24.4
 scikit-learn==1.7.0
 setuptools==80.9.0
 cuda-python>=12.3
-python-dotenv
-hydra-core
-seaborn
+python-dotenv==1.1.1
+hydra-core==1.3.2
+seaborn==0.13.2
 
 git+https://github.com/hossein-khalilian/text_normalizer.git
